# boatrace-love

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2401a26dff2a_add_phase4_tables_for_realtime_data.py  2aa075ebabae_add_phase3_tables_for_race_cards_and_.py  6c2f1a91b8e7_realign_phase4_live_snapshot_tables.py  b48e5d316863_create_phase2_racer_period_stats_tables.py  d5f2f8a0c1e4_repair_phase3_phase2_raw_constraint.py  fea2050a2b26_create_initial_metadata_tables.py
apps/api/app/: main.py
apps/api/app/backtesting/: __init__.py  engine.py  schemas.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/features/: aggregations.py  build.py  export.py  labels.py  leakage.py  quality.py
apps/api/app/ingestion/: archive.py  encoding.py  html_fetcher.py  race_downloads.py  race_id.py  race_quality.py
apps/api/app/ml/: __init__.py  dataset.py  evaluate.py  preprocessing.py  registry.py  split.py  train.py
apps/api/app/models/: __init__.py  downloads.py  management.py  odds.py  payouts.py  pre_race_info.py  race_cards.py  race_master.py  race_results.py  racer_period_stats.py
apps/api/app/prediction/: __init__.py  errors.py  features.py  model_store.py  schemas.py  service.py
apps/api/app/routers/: dependencies.py  models.py  predictions.py
apps/api/tests/: conftest.py  test_main.py
apps/api/tests/backtesting/: test_engine.py
apps/api/tests/features/: test_aggregations.py  test_build.py  test_export.py  test_labels.py  (+2 more)
(+77 files in other folders)
