[project]
name = "boatrace-love-api"
version = "0.1.0"
description = "BOATRACE=LOVE MVP API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.18",
    "alembic>=1.13.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.44.0",
    "prefect<3.0",
    "mlflow>=2.13.0",
    "pandera>=0.18.3",
    "griffe<1.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
